docs/kubernetes/deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: redmine
  namespace: demo-nxs-chat-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmine
  template:
    metadata:
      labels:
        app: redmine
    spec:
      containers:
      - name: redmine
        image: nixyslab/nxs-chat-redmine:3.4.6-2.0
        volumeMounts:
        - mountPath: /usr/src/redmine/config/configuration.yml
          name: redmine-config
          subPath: configuration.yml
        - mountPath: /usr/src/redmine/config/additional_environment.rb
          name: redmine-config
          subPath: additional_environment.rb
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
      volumes:
        - name: redmine-config
          configMap:
             name: redmine
             items:
              - key: configuration.yml
                path: configuration.yml
              - key: additional_environment.rb
                path: additional_environment.rb

---

apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: nxs-chat-srv
  namespace: demo-nxs-chat-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nxs-chat-srv
  template:
    metadata:
      labels:
        app: nxs-chat-srv
    spec:
      serviceAccountName: gitlab-deployer
      containers:
      - name: nxs-chat-srv
        image: nixyslab/nxs-chat-srv:0.3.1
        volumeMounts:
        - mountPath: /usr/share/nxs-chat-srv/nxs-chat-srv.conf.j2
          name: nxs-chat-srv-config
          subPath: nxs-chat-srv.conf.j2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      volumes:
        - name: nxs-chat-srv-config
          configMap:
             name: nxs-chat-srv
             items:
              - key: nxs-chat-srv.conf.j2
                path: nxs-chat-srv.conf.j2

---

apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: redis
  namespace: demo-nxs-chat-srv
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379
