docs/kubernetes/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: redmine
  namespace: demo-nxs-chat-srv
spec:
  selector:
    app: redmine
  clusterIP: None
  ports:
  - name: http
    port: 3000
    targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: nxs-chat-srv
  namespace: demo-nxs-chat-srv
spec:
  selector:
    app: nxs-chat-srv
  clusterIP: None
  ports:
  - name: http
    port: 80
    targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: demo-nxs-chat-srv
spec:
  selector:
    app: redis
  clusterIP: None
  ports:
  - name: tcp
    port: 6379
    targetPort: 6379
