docs/kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: redmine
  namespace: demo-nxs-chat-srv
  annotations:
    certmanager.k8s.io/issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - demo.nxs-chat.example.com
    secretName: redmine-tls
  rules:
  - host: demo.nxs-chat.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: redmine
          servicePort: 3000

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nxs-chat-srv
  namespace: demo-nxs-chat-srv
  annotations:
    certmanager.k8s.io/issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - bot-api.demo.nxs-chat.example.com
    secretName: nxs-chat-srv-tls
  rules:
  - host: bot-api.demo.nxs-chat.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nxs-chat-srv
          servicePort: 80
